@startuml
'https://plantuml.com/class-diagram

class CarNotFoundException{
}

class InvalidAttributesException {
}

class invalidAttributesValueException {
}

class InvalidAttributesChangeException {
}

InvalidAttributesException <|-- InvalidAttributesChangeException
InvalidAttributesException <|-- invalidAttributesValueException
@enduml